--- a/css/styles.css
+++ b/css/styles.css
@@ -658,6 +658,72 @@ margin: 0;
    background-color: var(--accent-color);
 }
 
+/* Footer form */
+.form-wrap {
+   display: flex;
+   align-items: center;
+}
+
+.footer-form-imput {
+   width: 100%;
+   width: 358px;
+   height: 50px;
+
+   /* font-weight: 400; */
+   font-size: 16px;
+   line-height: calc(20 / 16);
+   letter-spacing: 0.03em;
+
+   background-color: transparent;
+   padding-left: 16px;
+   margin-right: 12px;
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+   border-radius: 4px;
+   color: var(--secondary-txt-cl);
+   outline: transparent;
+
+   transition: border-color var(--animation);
+}
+
+.footer-form-imput:focus {
+   border-color: var(--secondary-txt-cl);
+}
+
+.footer-form-btn {
+   position: relative;
+   display: inline-flex;
+
+   width: 200px;
+   height: 50px;
+   font-weight: 700;
+   font-size: 16px;
+   line-height: calc(30 / 16);
+
+   padding: 10px 28px;
+   letter-spacing: 0.06em;
+
+   color: var(--secondary-txt-cl);
+
+   background: var(--accent-color);
+   border: transparent;
+   border-radius: 4px;
+
+   transition: background-color var(--animation), box-shadow var(--animation);
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+   background-color: #188CE8;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+}
+
+.footer-form-icon {
+   position: absolute;
+   top: 13px;
+   right: 28px;
+}
 
 /* Modal window */
 .backdrop {
