--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,19 @@ padding: 0;
 margin: 0;
 }
 
+.visually-hidden {
+   position: absolute;
+   white-space: nowrap;
+   width: 1px;
+   height: 1px;
+   overflow: hidden;
+   border: 0;
+   padding: 0;
+   clip: rect(0 0 0 0);
+   clip-path: inset(50%);
+   margin: -1px;
+}
+
 /* base styles */
 
 .section {
@@ -676,6 +689,7 @@ margin: 0;
 
    background-color: transparent;
    padding-left: 16px;
+   padding-right: 16px;
    margin-right: 12px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -708,14 +722,14 @@ margin: 0;
    background: var(--accent-color);
    border: transparent;
    border-radius: 4px;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-   transition: background-color var(--animation), box-shadow var(--animation);
+   transition: background-color var(--animation);
 }
 
 .footer-form-btn:hover,
 .footer-form-btn:focus {
    background-color: #188CE8;
-   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 }
 
@@ -756,7 +770,8 @@ margin: 0;
    transform: translate(-50%, -50%) scale(1) rotate(0);
 
    width: 528px;
-   height: 581px;
+   min-height: 581px;
+   padding: 40px;
    background: #FFFFFF;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
@@ -784,5 +799,157 @@ margin: 0;
    border-radius: 50%;
    background-color: transparent;
    cursor: pointer;
+
+   transition: fill var(--animation);
 }
 
+.modal-btn:hover,
+.modal-btn:focus {
+   fill: var(--accent-color);
+}
+
+ .register-form {
+   text-align: center;
+ }
+
+.register-form-title {
+   display: block;
+   margin-bottom: 12px;
+
+
+   font-weight: 700;
+   font-size: 20px;
+   line-height: calc(23 / 20);
+   text-align: center;
+   letter-spacing: 0.03em;
+   color: var(--main-txt-cl);
+}
+
+.register-form-group {
+   margin-bottom: 20px;
+}
+
+.register-form-wrap {
+   position: relative;
+   display: block;
+   margin-bottom: 10px;
+}
+
+.register-form-wrap:last-child {
+   margin-bottom: 0;
+}
+
+.register-form-label {
+   display: block;
+   text-align: left;
+
+   font-weight: 400;
+   font-size: 12px;
+   line-height: calc(14 / 12);
+   letter-spacing: 0.01em;
+   color: var(--minor-txt-cl);
+
+}
+
+.register-form-input,
+.register-form-message {
+   width: 100%;
+   padding: 10px;
+   padding-left: 40px;
+
+   border: 1px solid rgba(33, 33, 33, 0.2);
+   border-radius: 4px;
+
+   outline: transparent;
+
+   transition: border var(--animation);
+}
+
+.register-form-input:focus,
+.register-form-message:focus {
+   border: 1px solid #2196F3;;
+}
+
+.register-form-message {
+   height: 120px;
+   resize: none;
+   padding: 12px 16px;
+
+   transition: border var(--animation);
+}
+
+
+.register-form-icon {
+   position: absolute;
+   bottom: 12px;
+   left: 12px;
+
+   transition: fill var(--animation);
+}
+
+.register-form-input:focus-within + .register-form-icon {
+   fill: var(--accent-color);
+}
+
+.register-form-agreement {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 8px;
+   margin-bottom: 30px;
+}
+
+.register-checkbox:checked + .register-icon .register-icon-uncheck {
+   opacity: 0;
+   transition: opacity var(--animation);
+}
+
+.register-icon-check {
+   opacity: 0;
+   transition: opacity var(--animation);
+}
+
+.register-checkbox:checked + .register-icon .register-icon-check {
+   opacity: 1;
+}
+
+.register-form-agreement-text {
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 24px;
+   letter-spacing: 0.03em;
+   color: var(--minor-txt-cl);
+
+   user-select: none;
+}
+
+.register-form-agreement-link {
+   color: var(--accent-color);
+   text-underline-position: under;
+}
+
+.register-form-btn {
+   display: inline-flex;
+   align-items: center;
+
+   font-weight: 700;
+   font-size: 16px;
+   text-align: center;
+   letter-spacing: 0.06em;
+   color: var(--secondary-txt-cl);
+
+   height: 50px;
+   padding: 10px 52px;
+   background-color: var(--accent-color);
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+   border-radius: 4px;
+   border: transparent;
+   cursor: pointer;
+
+   transition: background-color var(--animation);
+}
+
+.register-form-btn:hover,
+.register-form-btn:focus {
+   background-color: #188CE8;
+}
