--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,9 @@ margin: 0;
    margin-bottom: 20px;
 }
 
-
+.footer-socials {
+   margin-left: 70px;
+}
 
 
  /* PORTFOLIO */
@@ -636,7 +638,6 @@ margin: 0;
 .footer-contr {
    display: flex;
    align-items: baseline;
-   gap: 70px;
 }
 
 .address-contr {
@@ -677,6 +678,10 @@ margin: 0;
    align-items: center;
 }
 
+.footer-form {
+   margin-left: auto;
+}
+
 .footer-form-imput {
    width: 100%;
    width: 358px;
@@ -707,6 +712,8 @@ margin: 0;
 .footer-form-btn {
    position: relative;
    display: inline-flex;
+   gap: 10px;
+   align-items: center;
 
    width: 200px;
    height: 50px;
@@ -725,6 +732,7 @@ margin: 0;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
    transition: background-color var(--animation);
+   cursor: pointer;
 }
 
 .footer-form-btn:hover,
@@ -733,11 +741,6 @@ margin: 0;
 
 }
 
-.footer-form-icon {
-   position: absolute;
-   top: 13px;
-   right: 28px;
-}
 
 /* Modal window */
 .backdrop {
@@ -842,8 +845,8 @@ margin: 0;
 .register-form-label {
    display: block;
    text-align: left;
+   margin-bottom: 4px;
 
-   font-weight: 400;
    font-size: 12px;
    line-height: calc(14 / 12);
    letter-spacing: 0.01em;
@@ -877,6 +880,14 @@ margin: 0;
 
    transition: border var(--animation);
 }
+
+.register-form-message::placeholder {
+   font-size: 12px;
+   line-height: 14px;
+   letter-spacing: 0.01em;
+   color: rgba(117, 117, 117, 0.5);
+}
+   
 
 
 .register-form-icon {
